--- a/docs/styles.css
+++ b/docs/styles.css
@@ -16,7 +16,7 @@
 }
 
 main {
-    width: 1325px;
+    max-width: 1325px;
     height: 700px;
     border: 1px solid transparent;
     margin: 100px auto;
@@ -25,8 +25,8 @@ main {
 }
 
 #container {
-    height: 500px;
-    width: 920px ;
+    height: 480px;
+    width: 925px;
     display: flex;
     flex-flow: row nowrap;
     margin: 100px auto;
@@ -116,6 +116,20 @@ button {
     color: hsl(228, 45%, 44%); 
 }
 
+@media (max-width: 970px) {
+
+    main {
+        height: 630px;
+        width: 100%;
+    }
+    
+    #container {
+        margin-top: 80px;
+        width: 90%;
+    }
+}
+
+
 @media (max-width:375px) {
     
     main {
@@ -126,7 +140,6 @@ button {
     }
     
     #container {
-        background-color: black;
         height: 70%;
         width: 90%;
         flex-flow: column nowrap;
@@ -135,6 +148,18 @@ button {
 
     #container div {
         height: 400px;
+    }
+
+    #sedans {
+        border-radius: 5px 5px 0px 0px;
+    }
+
+    #suvs {
+        border-radius: 0px 0px 0px 0px;
+    }
+
+    #luxury {
+        border-radius: 0px 0px 5px 5px;
     }
 
     footer {
